Update responsive archive version 2.0

--- a/mdemaravilhosa-reprograma/index.html
+++ b/mdemaravilhosa-reprograma/index.html
@@ -17,23 +17,19 @@
 </head>
 
 <body>
-<nav>
-    <div class="topbar"> 
-        <div>
-        <a href="#"> 
-            <img src="img/logo-white.png" alt="logotipo" width="50%">
-        </a>
-        </div>
-
-       <div>
-            <ul>
-                <li> <a href="index.hmtl"> Home </a> </li>
-                <li> <a href="sobre.html"> Sobre </a> </li>
-                <li> <a href="perfil.html"> Perfis </a> </li>
-            </ul>
-      </div>
-    </div>
-</nav>
+        <nav>
+                <div class="topbar">       
+                        <img src="img/logo-white.png" alt="logotipo m de maravilhosa">                      
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="sobre.htlm">Sobre</a></li>
+                            <li><a href="perfil.html">Perfis</a></li> 
+                        </ul>   
+                         <div class="mobilebtn">
+                             <img src="img/menu.png" alt="menu"> 
+                        </div>
+                </div>    
+        </nav>
 
 <header>        
       <div class="textoheader"> 
