--- a/mdemaravilhosa-reprograma/sobre.html
+++ b/mdemaravilhosa-reprograma/sobre.html
@@ -18,26 +18,24 @@
 </head>
 
 <body>
-<nav>
-    <div class="topbar"> 
-        <div>
-        <a href="#"> 
-            <img src="img/logo-white.png" alt="logotipo" width="50%">
-        </a>
-        </div>
-
-       <div>
+<body>
+    <nav>
+    <div class="topbar">       
+            <img src="img/logo-white.png" alt="logotipo m de maravilhosa">                      
             <ul>
-                <li> <a href="index.html"> Home </a> </li>
-                <li> <a href="sobre.html"> Sobre </a> </li>
-                <li> <a href="perfil.html"> Perfis </a> </li>
-            </ul>
-      </div>
-    </div>
-</nav>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.htlm">Sobre</a></li>
+                <li><a href="perfil.html">Perfis</a></li> 
+            </ul>   
+                <div class="mobilebtn">
+                    <img src="img/menu.png" alt="menu"> 
+            </div>
+    </div>    
+        </nav>
+        
 
-<header class="top-header">        
-      <div class="textoheader"> 
+<header class="top-header-sobre">        
+      <div class="sobreheader"> 
         <h1> SOBRE </h1>
     </div>
 </header>
