--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <P> Conheça as mulheres que fizeram a diferença no nosso país, nas mais variadas áreas de conhecimento e cultura.</P>
 
-        <a href="sobre.html" alt="Botão link sobre quero conhecer mais sobre o tema"> <strong> quero conhecer </strong></a>
+        <a href="sobre.html" alt="Botão link sobre quero conhecer mais sobre o tema"> quero conhecer </a>
     </div>
 </header> 
 
@@ -52,7 +52,8 @@
     </section>
 
 <section class="mulheres"> 
-    <div class="saibamais">
+    <!-- Sobre nome de classes, procure relacionar ao tipo de objeto ou seção em que se localiza. Ex. 'titulo-mulheres' ao invés de 'saibamais' -->
+    <div class="titulo-mulheres">
     <h2> VOCÊ CONHECE ESSAS MULHERES </h2>
     </div>
 
